<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#000"
    tools:context="learn.mehadihossain.simplecalculator.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/previousTextView"
            android:layout_weight=".8"
            style="@style/DarkButton"
            android:gravity="center"
            android:layout_gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:id="@+id/editorText"
                android:layout_weight="7"
                android:layout_margin="@dimen/button_margin"
                style="@style/DarkButton"

                android:layout_gravity="center"/>

            <Button
                android:text="@string/cross"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:layout_gravity="center"
                android:onClick="clearText" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:text="@string/seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/LightButton"
                    android:onClick="numberClick"/>
                <Button
                    android:text="@string/eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/LightButton"
                    android:onClick="numberClick"/>

                <Button
                    android:text="@string/nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/LightButton"
                    android:onClick="numberClick"/>

                <Button
                    android:text="@string/division"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/DarkButton2"
                    android:onClick="operatorClick"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:text="@string/four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/LightButton"
                    android:onClick="numberClick"/>
                <Button
                    android:text="@string/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/LightButton"
                    android:onClick="numberClick"/>

                <Button
                    android:text="@string/six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/LightButton"
                    android:onClick="numberClick"/>

                <Button
                    android:text="@string/multiplication"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/button_margin"
                    style="@style/DarkButton2"
                    android:onClick="operatorClick"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <Button
                            android:text="@string/one"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/button_margin"
                            style="@style/LightButton"
                            android:onClick="numberClick"/>

                        <Button
                            android:text="@string/two"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/button_margin"
                            style="@style/LightButton"
                            android:onClick="numberClick"/>

                        <Button
                            android:text="@string/three"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/button_margin"
                            style="@style/LightButton"
                            android:onClick="numberClick"/>
                        <Button
                            android:text="@string/plus"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/button_margin"
                            style="@style/DarkButton2"
                            android:onClick="operatorClick"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <Button
                            android:text="@string/zero"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:layout_margin="@dimen/button_margin"
                            style="@style/LightButton"
                            android:onClick="numberClick"/>

                        <Button
                            android:text="@string/equal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/button_margin"
                            style="@style/LightButton"
                            android:onClick="operatorClick"/>

                        <Button
                            android:text="@string/minus"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/button_margin"
                            style="@style/DarkButton2"
                            android:onClick="operatorClick"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
